[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hashtree
sha2 = "0.10.2"
base64ct = { version = "1.5.0", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TCP server
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"