[package]
name = "bbup-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hashtree
sha2 = "0.10.2"
base64ct = { version = "1.5.0", features = ["alloc"] }

# hashtree & TCP server & TCP client
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TCP server & TCP client
serde_yaml = "0.8"

# TCP server
tokio = { version = "1", features = ["full"] }