[package]
name = "bbup-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.2" # hashtree
base64ct = { version = "1.5.0", features = ["alloc"] } # hashtree
regex = "1.5" # hashtree
serde = { version = "1.0", features = ["derive"] } # fs & comunication
serde_json = "1.0" # fs & comunication
serde_yaml = "0.8" # fs & comunication
clap = { version = "3.2.5", features = ["derive"] } # server & client (cli)
dirs = "4.0.0" # server & client (home directory)
tokio = { version = "1", features = ["full"] } # server (multithread)
rand = { version = "0.8.5", features = ["small_rng"] } # random
anyhow = "1.0"
thiserror = "1.0"
bincode = "1.3.3"
indicatif = "0.16.2"