[package]
name = "bbup"
version = "0.1.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
indicatif = "0.16"
clap = { version = "3.2", features = ["derive"] }

abst_fs = { path = "../lib/abst_fs" }
ssh_tunnel = { path = "../lib/ssh_tunnel" }
input = { path = "../lib/input" }
ior = { path = "../lib/ior" }
hasher = { path = "../lib/hasher" }
fs_vcs = { path = "../lib/fs_vcs" }
bbup_com = { path = "../lib/bbup_com" }
